# Slamming

./: .gitmodules  CMakeLists.txt  README.md  progress.txt
config/: odom_config.json
include/: UdpSocket.hpp  pipeline.hpp
manual/: setting.txt
report/: vizualize.asv
report/traj/: map_20250811_152722.txt  trajectory_20250811_152722.txt
src/: UdpSocket.cpp  main.cpp  pipeline.cpp
